static/css/game.css
body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background: linear-gradient(to bottom, #b22222, #ff6347, #b22222); /* Red gradient with lighter red in the center */
    color: #fff;
    text-align: center;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#action-buttons{
    position: fixed;
    width: 40%;
    bottom: 1%;
    left: 50%;
    display: flex;
    justify-content: center;
    transform: translateX(-50%);
}
.action-button{
    width: 100%;
    padding: 0.5vmin 4vmin;
    margin: 2px;
    background-color:#d84234;
    border-radius: 5px;
    border-width: 2px;
    border-color: gold;
    border-style: solid;
    color: white;
    font-size: 2vmin;
    font-weight: bold;
    cursor: pointer;
    transition: background-color 0.1s ease;
}
.action-button:disabled{
    background-color:#5f1d17d5;
    border-color: rgba(168, 143, 0, 0.89);
    color: rgba(182, 182, 182, 0.904);
    cursor: not-allowed;
}
.action-button:not(:disabled):hover{
    background-color: #ff6347;
}
.action-button:not(:disabled):active{
    background-color: #9e3c2a;
}
#draw-card-button{
    border-radius: 5px 0px 0px 5px;
    max-width: 150px;
}
#hand-cards{
    display: flex;
}
#player-hand{
    position: fixed;
    bottom: 10%;
    left: 50%;
    transform: translate(-50%);
}

#play-card-button{
    border-radius: 0px 5px 5px 0px;
    max-width: 100px;
}
.card{
    position: relative;
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: column;
    background-image: url("https://i.ibb.co/1YK8npNX/uno-card.png");
    width: 15vmin;
    height: 23vmin;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: blue;
    border-radius: 15px;

}
.selected-card{
    transform: translate(0px, -20px);
}


.center-value {
    position: absolute;
    width: 80%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    pointer-events: none;
    z-index: 0;
}

.top-left-value {
    position: absolute;
    width: 40%;
    top: 15%;
    left: 20%;
    transform: translate(-50%, -50%);
    pointer-events: none;
    z-index: 0;
}

.bottom-right-value{
    position: absolute;
    width: 40%;
    top: 85%;
    left: 80%;
    transform: translate(-50%, -50%) scaleX(-1) rotateX(180deg);
    pointer-events: none;
    z-index: 0;
}

#game-info{
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
}


#game-container{
    position: relative;
    z-index: 5;
}

#sidebar{
    position: fixed;
    z-index: 1;
    top: 1%;
    right: 0%;
    background-color: red;
    border-radius: 5px 0px 0px 5px;
    height: 98%;
    width: 40%;
    transition: cubic-bezier(.65,.05,.36,1);
    transition-duration: 0.55s;
}

#sidebar-button{
    position: absolute;
    top: 5%;
    width: 3rem;
    height: 2rem;
    align-content: center;
    transform: translate(-100%);
    background-color: #f20000;
    border-radius: 7px 0px 0px 7px;
}
#sidebar-button:hover{
    background-color: #ff6347;
    cursor: pointer;
}
#sidebar-button:active{
    background-color: #9e3c2a;
}

#sidebar-content{
    display: flex;
    justify-content: center;
}
.avatar{
    position: absolute;
    width: 95px;
    top: 50%;
    left: -30%;
    transform: translate(-50%, -90%);
    pointer-events: none;
    z-index: 2;
    border-radius: 30px;
}

.name-tag{
    padding: 10px;
    padding-left: 45px;
    background-color: gold;
    color: #b22222;
    font-size: 16px;
    font-weight: bold;
    border: none;
    border-radius: 5px;
    z-index: 1;
    position: absolute;
    left: 0%;
    bottom: 50%;
}

#player-container{
    display: grid;
    position: absolute;
    z-index: 0;
    grid-template-areas: "layer";
    place-items: center;
    background: #df0000;
    border-radius: 50%;

    --radius: 25vmin;
    width: calc(2 * var(--radius));
    height: calc(2 * var(--radius));

    left: 50%;
    transform: translate(-50%);
    top: 11vmin;
}

.player-body{
    grid-area: layer;
    width: 10vmin;
    height: 10vmin;
    border-radius: 50%;

    display: grid;
    place-items: center;

    background: #ffc947;
    color: #185adb;
    font-weight: bold;
    font-size: 3vmin;

    --d: calc(var(--i) / var(--total));
    --r-offset: 0.25turn;
    --r-amount: 1turn;
    --r: calc((var(--r-amount) * var(--d)) + var(--r-offset));
    --transform: rotate(var(--r)) translate(var(--radius))
      rotate(calc(-1 * var(--r)));

    transform: var(--transform);
}

#top-card{
    display: flex;
    justify-content: center;
    align-items: center;
}

.player-turn{
    background-color: white;
}

.card-amount-image{
    width: 45px;
    z-index: 0;
    position: absolute;
    left: 30%;
    bottom: 75%;
    transform: rotatez(0deg);
}
.card-amount{
    position: absolute;
    bottom: 105%;
    z-index: 4;
    left: 60%;
    font-size: 2rem;
}

.player-score-table {
    width: 80%;
    margin: 20px auto;
    border-collapse: collapse;
    background-color: #fff;
    color: #b22222;
    font-size: 2vmin;
    border-radius: 10px;
    overflow: hidden;
}



.player-score-table th {
    background-color: #ff6347;
    color: white;
    font-weight: bold;
}

.player-score-table tr:nth-child(even) {
    background-color: #f9f9f9;
}

.player-score-table tr:hover {
    background-color: #ffe4e1;
    cursor: pointer;
}

